feat: support drawing box-shadow

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
   <title>Document</title>
   <style>
     #img {
-      width: 300px;
+      width: 600px;
     }
     .div {
       width: 300px;
       height: 300px;
       border-radius: 9999px;
       background: linear-gradient(225deg, rgba(245, 224, 20, 1) 0, rgba(190, 122, 240, 1) 100%);
+    }
+
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
     }
   </style>
 </head>
